<resources>
    <string name="app_name">Двухфакторная авторизация</string>

    <string name="default_notification_channel_id" translatable="false">fcm_bc2fa_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <string name="default_notification_channel_name" translatable="true">Requests</string>
    <string name="default_notification_broadcast_name" translatable="false">RequestPush</string>

    <!-- Strings related to login -->
    <string name="prompt_pin">Введите PIN-код</string>
    <string name="prompt_fingerprint">Или сосканируйте отпечаток пальца</string>
    <string name="action_sign_in">Войти</string>
    <string name="action_restore">Восстановить PIN</string>
    <string name="action_sign_up">Зарегистрировать устройство</string>
    <string name="fingerprint_success">Отпечаток распознан</string>
    <string name="fingerprint_help">Отпечаток не считался</string>
    <string name="fingerprint_error">Не тот палец. Попробуйте авторизоваться через некоторое время или с помощью PIN кода</string>
    <string name="fingerprint_failed">Не удалось распознать отпечаток пальца</string>
    <string name="app_description">"Двухфакторная аутентификация — это дополнительный уровень безопасности, который гарантирует, что доступ к вашей учетной записи сможете получить только вы, даже если пароль известен кому-либо еще.\n\nДля уведомления о втором факторе авторизации будет использовано PUSH сообщение. Потому рекомендуем разрешить PUSH для того устройства\n\nЧтоб начать использование приложения зарегистрируйте свое устройство."</string>

    <!-- Strings related to main -->
    <string name="action_check_push">Проверка сообщений</string>
    <string name="title_activity_main">Подтверждение</string>
    <string name="action_verify">Подтвердить</string>
    <string name="action_reject">"Это не я"</string>
    <string name="action_new_request">"Пришел новый запрос на авторизацию. Нажмите кнопку «Обновить запросы» после ответа на текущий"</string>
    <string name="main_default_title">"Что это такое?"</string>
    <string name="main_default_description">"Двухфакторная аутентификация — это дополнительный уровень безопасности, который гарантирует, что доступ к вашей учетной записи сможете получить только вы, даже если пароль известен кому-либо еще.\n\nПосле выполнения входа код подтверждения больше не будет запрашиваться на этом устройстве, пока не будет полностью выполнен выход, не будут стерты все данные на устройстве или пока не потребуется сменить код из соображений безопасности."</string>

    <string name="title_verified">Подтверждено</string>
    <string name="title_rejected">Отклоненоено</string>
    <string name="request_title_format">%s запрашивает разрешение</string>
    <string name="request_description_format">Сервис «%s» запрашивает разрешение на событие «%s».</string>
    <string name="success_verified">Запрос успешно верифицирован</string>
    <string name="success_rejected">Запрос успешно отклонен</string>
    <string name="no_new_request">Новых запросов не найдено</string>

    <string name="error_request">Ошибка обновления</string>
    <string name="error_verified">Что-то пошло не так. Не удалось отправить ответ.</string>

    <!-- Strings related to register -->
    <string name="title_activity_register">Зарегистрировать устройство</string>
    <string name="title_activity_restore">Восстановить PIN</string>
    <string name="prompt_phone">Ваш телефон</string>
    <string name="enter_pin">PIN код должен состоять из 4-х цифр.\nМы не сможем его восстановить. Не забывайте его!</string>
    <string name="enter_phone">Вводите телефон в международном формате.\nПример: +77476544849</string>
    <string name="enter_pin_small">PIN код</string>
    <string name="restore_pin_small">Новый PIN код</string>
    <string name="error_empty_pin">PIN-код обязателен</string>
    <string name="error_empty_phone">Телефон обязателен</string>
    <string name="error_invalid_pin">PIN-кода должен состоять из 4-х цифр</string>
    <string name="error_invalid_phone">Формат телефона не корректньй</string>
    <string name="action_send_code">Подтвердить телефон</string>
    <string name="action_register">Отправить подтверждение</string>
    <string name="enter_code">Введите код подтверждения, которьй пришел вам с помощью СМС</string>
    <string name="resend_code">Не приходит код? Проверьте корректность номера телефона и запросите СМС с кодом снова.</string>
    <string name="action_resend_code">Отправить код снова</string>
    <string name="enter_code_small">Код подтверждения</string>

    <string name="error_invalid_code">Код неверен</string>
    <string name="register_success">Операция успешна. Не забьвайте свой PIN код</string>
    <string name="error_field_required">Данное поле обязательно для заполнения</string>

    <string name="error_internet_sms">Не удалось отправить SMS код. Попробуйте снова чуть позже.</string>
    <string name="error_internet_register">Не удалось зарегистрировать телефон. Попробуйте снова чуть позже.</string>

    <string name="permission_fingerprint_rationale">"Доступ к отпечаткам пальцев необходим для безопасной авторизации и регистрации устройства."</string>
    <string name="permission_push_rationale">"Доступ к приему PUSH сообщений необходим для второго фактора авторизации."</string>
    <string name="permission_sms_rationale">"Доступ к SMS сообщеням необходим для автоматического подтверждения регистрации устройства."</string>
    <string name="permission_full_rationale">"Разрешения необходимы для корректной работы второго фактора авторизации."</string>

    <!-- Strings related to pin view -->
    <string name="key_1" translatable="false">1</string>
    <string name="key_2" translatable="false">2</string>
    <string name="key_3" translatable="false">3</string>
    <string name="key_4" translatable="false">4</string>
    <string name="key_5" translatable="false">5</string>
    <string name="key_6" translatable="false">6</string>
    <string name="key_7" translatable="false">7</string>
    <string name="key_8" translatable="false">8</string>
    <string name="key_9" translatable="false">9</string>
    <string name="key_0" translatable="false">0</string>
</resources>
