<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bc2fa.a2fa.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:textColor="#fff"
        android:minHeight="?attr/actionBarSize"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:textColor="#fff"
            android:background="@color/colorPrimary">

            <ImageButton
                android:id="@+id/reloadPushButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:theme="@style/AppTheme"
                app:srcCompat="@android:drawable/ic_popup_sync" />

        </LinearLayout>

    </android.support.v7.widget.Toolbar>

    <ProgressBar
        android:id="@+id/reloadProgress"
        style="@android:style/Widget.Material.Light.ProgressBar.Large"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="64dp"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="64dp"
        android:fillViewport="true"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:id="@+id/verifyView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/questionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/main_default_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:visibility="visible" />

            <TextView
                android:id="@+id/questionDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/questionTitle"
                android:layout_marginTop="14dp"
                android:text="@string/main_default_description"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/verifyButton"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/questionDescription"
                    android:layout_below="@+id/questionDescription"
                    android:layout_weight="1"
                    android:text="@string/action_verify"
                    android:textColor="@color/colorPrimaryDark"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/rejectButton"
                    style="@android:style/Widget.Material.Button.Borderless.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/verifyButton"
                    android:layout_alignBottom="@+id/verifyButton"
                    android:layout_toEndOf="@+id/verifyButton"
                    android:layout_weight="1"
                    android:text="@string/action_reject"
                    android:textColor="@color/colorAccent"
                    android:visibility="gone" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
